[package]
name = "commandline"
version = "0.1.0"
authors = ["tensor-programming <tensordeveloper@gmail.com>"]
edition = "2018"

[dependencies]
clap = { version = "3.0.0-beta.1", features = ["yaml"] }
iota-stronghold = {path = "../../client/"}
riker = "0.4"
futures = "0.3"

[[bin]]
name = "stronghold"
path = "src/main.rs"

[workspace]
